[package]
name = "van-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { dversion = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0"
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
